  2.5.1

   Bugs fixed

      - fixed 110570, properties tool not appearing in Kupu
      - fixed 101577, widgets missing from service_news_sub_viewer
      - fixed 101299, NoViewError exception when comparing newsitem versions
      - fixed 101731, NewsItems have "make local" settings tab option
      - fixed 101729, Display DT isn't updated when NewsItems are
                      in the future
  2.5

    Features added

      - Made SilvaNews work with Silva 2.0/Zope 2.10.

    Bugs fixed

      - removed tal:attribute where tal:replace was called.

      - added 'en' to i18n to make the fallback work.

  2.4.1

    Bugs fixed

      - fix for broken rss feed caused by get_intro() not getting the
        model

  2.4

    Features added
    
      - SilvaNews 2.4 is compatible with Silva 1.6+ only. For Silva
        1.5 compatibility, the SilvaNews 2.3.x series should be used.

      - added interfaces INewsViewer and IAgendaViewer. These
        interfaces can be used by SilvaLayout/Five to provide special
        views for news/agenda viewers.

    Bugs fixed

      - using 'get_intro' for RSS feeds introduced a bug in at least
        some RSS feeds. This has been worked around.

  2.3

    Features added

      - the rss views now use the get_intro method of the items,
        instead of the metadata description.

  2.2

    Features

      - in tab_edit you can now see in the preview of a published
        NewsItem an infobox showing all related info

      - changed layout more silva-core-like and improved usability cfr
        issue 1581

      - uniformed css classes for view and viewer newsitems,
        un-div-ing

      - more xhtml compliant

    Bugs fixed

      - fixed bug cfr revision 8871 removed can_approve()

      - fixed rss icon cfr issue 1506, 1580

      - fixed display date rendering and setting cfr issue 1601, 1603

      - fixed publish now cfr issue 1605

      - fixed imort/export of InlineNewsViewer cfr issue 1600
